[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxima"
path = "src/main.rs"

[dependencies]
libc = "0.2.112"
rand = "0.8.4"
base64 = "0.13.0"
reqwest = { version = "0.11.9", features = ["blocking"] }
handlebars = "4.2.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81" }
axum = "0.5.1"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7.6", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
bb8 = "0.8.0"
bb8-postgres = "0.8.0"
tower = { version = "0.4.1", features = ["full"] }
tower-http = { version = "0.3.3", features = ["full"] }
clap = { version = "3.1.18", features = ["derive"] }
chrono = { version = "0.4.19", features = ["serde"] }
string-builder = { version = "0.2.0" }
html-escape = "0.2.11"
async-graphql = "4.0.1"
async-graphql-axum = "4.0.1"
aws-config = "0.13.0"
aws-sdk-appconfig = "0.13.0"
aws-sdk-appconfigdata = "0.13.0"
aws-sdk-sqs = "0.13.0"
xml-rs = "0.8.4"
jsonwebtoken = "8.1.0"
once_cell = "1.12.0"
totp-rs = { version = "2.0", features = ["qr", "otpauth"] }
nanoid = "0.4.0"
async-trait = "0.1.56"
mime = "0.3.16"
postgres-types = "0.2.3"
pinyin = "0.9"
jieba-rs = "0.6"